--- a/scss/pages/_the-latest.scss
+++ b/scss/pages/_the-latest.scss
@@ -78,3 +78,27 @@
   position: absolute;
   top: -15px; // Size of top border on figure
 }
+
+#the-latest-page .directory {
+  margin-bottom: -75px;
+
+  @include media-query(small) {
+    margin-bottom: -50px;
+  }
+}
+
+#the-latest-page .directory__row--second {
+  margin-bottom: ($margin-div / 2);
+
+  @include media-query(small) {
+    margin-bottom: 0;
+  }
+}
+
+#the-latest-page .directory__row--other {
+  margin: 0;
+}
+
+#the-latest-page .directory__figure--other-row {
+  margin: ($margin-div / 2) 0;
+}
